# procurehotel

./: .env.example  .gitignore  AGENTS.md  CI-CD-README.md  COMMIT_GUIDELINES.md  GUIA_USO_DIARIO.md  MANUTENCAO_5MESES_REPORT.md  MEMORY.md  OPERATIONAL-MODE.md  PONYTAIL-AUDIT.md  PONYTAIL-DEBT.md  PYTHON_SKILLS.md  README.md  REPORT.md  SOUL.md  SUPPLIER-INGEST-ANALYSIS.md  SUPPLIER-INGEST-RECOMMENDATION.md  UPTIME-MONITORING.md  docker-compose.yml  pdfs_content.txt
arch-public/: README.md
attachments/: 73f294f0__190a7720-5f51-441a-9b28-124f40f287ae.md  d54c5d5e__7d9d7ea4-fc08-45a8-85c6-0debcd9e5f43.xlsx
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260101_0000_0001_init.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  admin.py  analytics.py  auth.py  imports.py  orders.py  prices.py  products.py  roi.py  suppliers.py  users.py
backend/app/core/: __init__.py  config.py  database.py  hardening.py  logging.py  observability.py  redis.py  security.py  supabase_admin.py
backend/app/models/: __init__.py  audit.py  base.py  import_.py  order.py  price.py  product.py  supplier.py  user.py
backend/app/schemas/: __init__.py  auth.py  common.py  import_.py  order.py  product.py  supplier.py
backend/app/scripts/: __init__.py  seed.py
backend/app/services/: ai_normalizer.py  analytics.py  ocr_service.py  order_optimizer.py  storage.py  user_sync.py
backend/tests/: test_smoke.py
docs/: API.md  ARCHITECTURE.md  ARCHITECTURE_AUDIT.md  (+11 more)
(+185 files in other folders)
