[project]
name = "compra-facil-hoteis-backend"
version = "0.1.0"
description = "ProcureHotel — backend FastAPI"
requires-python = ">=3.11"
authors = [{ name = "ProcureHotel Team" }]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "S", "RUF"]
ignore = ["S101"]  # permitir `assert` em testes

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
